# eurobot2020_gazebo

./: CMakeLists.txt  README.md  package.xml
env-hooks/: env_variables.bash  env_variables.zsh
launch/: eurobot.launch  eurobot.launch.py
models/cup_green/: model.config  model.sdf
models/cup_green/meshes/: cup_green.dae
models/cup_red/: model.config  model.sdf
models/eurobot_arena_2020/: model.sdf
models/eurobot_arena_2020/meshes/: eurobot_arena_2020.dae  gallerie.dae
models/eurobot_arena_2022/: model.config  model.sdf
models/eurobot_arena_2022/meshes/: eurobot_2022.blend  eurobot_arena_2022.dae  support_statuette - Support_statuette.dae  taquet - taquet.dae  vinyle_2022.dae
models/eurobot_arena_2023/: model.config  model.sdf
models/eurobot_arena_2023/meshes/: eurobot_arena_2023_fixed.dae  vinyle_2023.dae
models/eurobot_arena_2024/: model.sdf
models/eurobot_arena_2024/meshes/: eurobot_arena_2023.dae  vinyle-table-2023.xcf
models/weathercock/: model.config  model.sdf
models/weathercock/meshes/: weathercock.dae
models/windsock/: model.config  model.sdf
models/windsock/meshes/: windsock.dae
worlds/: eurobot2020_basic_north.world  eurobot2020_basic_south.world  eurobot2020_full_north.world  eurobot2020_full_south.world  eurobot2022_basic.world  eurobot2023_basic.world  eurobot2024_basic.world
